--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
-    margin: 0;
-    overflow: hidden;
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
 }
 .under-area {
     position: absolute;
@@ -92,6 +93,8 @@ html,body{
   gap: 12px;
   margin-top:10px;
   flex-grow: 1;
+  min-height: 0;
+  overflow: auto;
 }
 
 /* Item */
@@ -110,6 +113,7 @@ html,body{
   border:1px solid rgba(255,255,255,0.02);
   background: linear-gradient(180deg, rgba(110, 110, 110, 0.012), rgba(255,255,255,0.006));
   box-shadow: 0 2px 12px rgba(2,6,23,0.45);
+  flex-shrink: 0;
 }
 
 /* Dragging state */
